// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Page Component] Home Renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home
    app={
        Object {
            "loading": false,
          }
    }
    categories={
        Array [
            Object {
              "name": "react",
              "path": "react",
            },
            Object {
              "name": "redux",
              "path": "redux",
            },
            Object {
              "name": "udacity",
              "path": "udacity",
            },
          ]
    }
    getAllData={[Function]}
    match={
        Object {
            "params": Object {
              "id": "all",
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Head
          description="Bem vindos ao Udacity Leitura, onde podemos discutir assuntos variados com uma gama enorme de pessoas"
          img="/img/blog_bottom.png"
          project="Udacity - Leitura"
/>,
        false,
        <div
          className="container"
>
          <div
                    className="row"
          >
                    <div
                              className="col col-lg-12 col-md-12 col-sm-12 col-12"
                    >
                              <div
                                        className="clients-grid"
                              >
                                        <Unknown>
                                                  <CategoryOption
                                                            categories={
                                                                      Array [
                                                                                Object {
                                                                                  "name": "react",
                                                                                  "path": "react",
                                                                                },
                                                                                Object {
                                                                                  "name": "redux",
                                                                                  "path": "redux",
                                                                                },
                                                                                Object {
                                                                                  "name": "udacity",
                                                                                  "path": "udacity",
                                                                                },
                                                                              ]
                                                            }
                                                            currentCategory="all"
                                                  />
                                                  <FilterBy
                                                            ordination={
                                                                      Array [
                                                                                Object {
                                                                                  "label": "Decrescente",
                                                                                  "value": "desc",
                                                                                },
                                                                                Object {
                                                                                  "label": "Crescente",
                                                                                  "value": "asc",
                                                                                },
                                                                              ]
                                                            }
                                                            properties={
                                                                      Array [
                                                                                Object {
                                                                                  "label": "Vote",
                                                                                  "value": "votes",
                                                                                },
                                                                                Object {
                                                                                  "label": "Data",
                                                                                  "value": "timestamp",
                                                                                },
                                                                                Object {
                                                                                  "label": "Reações",
                                                                                  "value": "reactions",
                                                                                },
                                                                                Object {
                                                                                  "label": "Comentários",
                                                                                  "value": "commentCount",
                                                                                },
                                                                              ]
                                                            }
                                                            search={[Function]}
                                                  />
                                        </Unknown>
                              </div>
                    </div>
                    <Connect(PostList)
                              category="all"
                              filter={[Function]}
                              order="desc"
                    />
          </div>
</div>,
        <AddPostButton />,
        <Footer
          project="Udacity - Leitura"
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Bem vindos ao Udacity Leitura, onde podemos discutir assuntos variados com uma gama enorme de pessoas",
          "img": "/img/blog_bottom.png",
          "project": "Udacity - Leitura",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="row"
>
            <div
                        className="col col-lg-12 col-md-12 col-sm-12 col-12"
            >
                        <div
                                    className="clients-grid"
                        >
                                    <Unknown>
                                                <CategoryOption
                                                            categories={
                                                                        Array [
                                                                                    Object {
                                                                                      "name": "react",
                                                                                      "path": "react",
                                                                                    },
                                                                                    Object {
                                                                                      "name": "redux",
                                                                                      "path": "redux",
                                                                                    },
                                                                                    Object {
                                                                                      "name": "udacity",
                                                                                      "path": "udacity",
                                                                                    },
                                                                                  ]
                                                            }
                                                            currentCategory="all"
                                                />
                                                <FilterBy
                                                            ordination={
                                                                        Array [
                                                                                    Object {
                                                                                      "label": "Decrescente",
                                                                                      "value": "desc",
                                                                                    },
                                                                                    Object {
                                                                                      "label": "Crescente",
                                                                                      "value": "asc",
                                                                                    },
                                                                                  ]
                                                            }
                                                            properties={
                                                                        Array [
                                                                                    Object {
                                                                                      "label": "Vote",
                                                                                      "value": "votes",
                                                                                    },
                                                                                    Object {
                                                                                      "label": "Data",
                                                                                      "value": "timestamp",
                                                                                    },
                                                                                    Object {
                                                                                      "label": "Reações",
                                                                                      "value": "reactions",
                                                                                    },
                                                                                    Object {
                                                                                      "label": "Comentários",
                                                                                      "value": "commentCount",
                                                                                    },
                                                                                  ]
                                                            }
                                                            search={[Function]}
                                                />
                                    </Unknown>
                        </div>
            </div>
            <Connect(PostList)
                        category="all"
                        filter={[Function]}
                        order="desc"
            />
</div>,
          "className": "container",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col col-lg-12 col-md-12 col-sm-12 col-12"
>
                <div
                                className="clients-grid"
                >
                                <Unknown>
                                                <CategoryOption
                                                                categories={
                                                                                Array [
                                                                                                Object {
                                                                                                  "name": "react",
                                                                                                  "path": "react",
                                                                                                },
                                                                                                Object {
                                                                                                  "name": "redux",
                                                                                                  "path": "redux",
                                                                                                },
                                                                                                Object {
                                                                                                  "name": "udacity",
                                                                                                  "path": "udacity",
                                                                                                },
                                                                                              ]
                                                                }
                                                                currentCategory="all"
                                                />
                                                <FilterBy
                                                                ordination={
                                                                                Array [
                                                                                                Object {
                                                                                                  "label": "Decrescente",
                                                                                                  "value": "desc",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Crescente",
                                                                                                  "value": "asc",
                                                                                                },
                                                                                              ]
                                                                }
                                                                properties={
                                                                                Array [
                                                                                                Object {
                                                                                                  "label": "Vote",
                                                                                                  "value": "votes",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Data",
                                                                                                  "value": "timestamp",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Reações",
                                                                                                  "value": "reactions",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Comentários",
                                                                                                  "value": "commentCount",
                                                                                                },
                                                                                              ]
                                                                }
                                                                search={[Function]}
                                                />
                                </Unknown>
                </div>
</div>,
              <Connect(PostList)
                category="all"
                filter={[Function]}
                order="desc"
/>,
            ],
            "className": "row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="clients-grid"
>
                  <Unknown>
                                    <CategoryOption
                                                      categories={
                                                                        Array [
                                                                                          Object {
                                                                                            "name": "react",
                                                                                            "path": "react",
                                                                                          },
                                                                                          Object {
                                                                                            "name": "redux",
                                                                                            "path": "redux",
                                                                                          },
                                                                                          Object {
                                                                                            "name": "udacity",
                                                                                            "path": "udacity",
                                                                                          },
                                                                                        ]
                                                      }
                                                      currentCategory="all"
                                    />
                                    <FilterBy
                                                      ordination={
                                                                        Array [
                                                                                          Object {
                                                                                            "label": "Decrescente",
                                                                                            "value": "desc",
                                                                                          },
                                                                                          Object {
                                                                                            "label": "Crescente",
                                                                                            "value": "asc",
                                                                                          },
                                                                                        ]
                                                      }
                                                      properties={
                                                                        Array [
                                                                                          Object {
                                                                                            "label": "Vote",
                                                                                            "value": "votes",
                                                                                          },
                                                                                          Object {
                                                                                            "label": "Data",
                                                                                            "value": "timestamp",
                                                                                          },
                                                                                          Object {
                                                                                            "label": "Reações",
                                                                                            "value": "reactions",
                                                                                          },
                                                                                          Object {
                                                                                            "label": "Comentários",
                                                                                            "value": "commentCount",
                                                                                          },
                                                                                        ]
                                                      }
                                                      search={[Function]}
                                    />
                  </Unknown>
</div>,
                "className": "col col-lg-12 col-md-12 col-sm-12 col-12",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <Unknown>
                    <CategoryOption
                                        categories={
                                                            Array [
                                                                                Object {
                                                                                  "name": "react",
                                                                                  "path": "react",
                                                                                },
                                                                                Object {
                                                                                  "name": "redux",
                                                                                  "path": "redux",
                                                                                },
                                                                                Object {
                                                                                  "name": "udacity",
                                                                                  "path": "udacity",
                                                                                },
                                                                              ]
                                        }
                                        currentCategory="all"
                    />
                    <FilterBy
                                        ordination={
                                                            Array [
                                                                                Object {
                                                                                  "label": "Decrescente",
                                                                                  "value": "desc",
                                                                                },
                                                                                Object {
                                                                                  "label": "Crescente",
                                                                                  "value": "asc",
                                                                                },
                                                                              ]
                                        }
                                        properties={
                                                            Array [
                                                                                Object {
                                                                                  "label": "Vote",
                                                                                  "value": "votes",
                                                                                },
                                                                                Object {
                                                                                  "label": "Data",
                                                                                  "value": "timestamp",
                                                                                },
                                                                                Object {
                                                                                  "label": "Reações",
                                                                                  "value": "reactions",
                                                                                },
                                                                                Object {
                                                                                  "label": "Comentários",
                                                                                  "value": "commentCount",
                                                                                },
                                                                              ]
                                        }
                                        search={[Function]}
                    />
</Unknown>,
                  "className": "clients-grid",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <CategoryOption
                        categories={
                                                Array [
                                                                        Object {
                                                                          "name": "react",
                                                                          "path": "react",
                                                                        },
                                                                        Object {
                                                                          "name": "redux",
                                                                          "path": "redux",
                                                                        },
                                                                        Object {
                                                                          "name": "udacity",
                                                                          "path": "udacity",
                                                                        },
                                                                      ]
                        }
                        currentCategory="all"
/>,
                      <FilterBy
                        ordination={
                                                Array [
                                                                        Object {
                                                                          "label": "Decrescente",
                                                                          "value": "desc",
                                                                        },
                                                                        Object {
                                                                          "label": "Crescente",
                                                                          "value": "asc",
                                                                        },
                                                                      ]
                        }
                        properties={
                                                Array [
                                                                        Object {
                                                                          "label": "Vote",
                                                                          "value": "votes",
                                                                        },
                                                                        Object {
                                                                          "label": "Data",
                                                                          "value": "timestamp",
                                                                        },
                                                                        Object {
                                                                          "label": "Reações",
                                                                          "value": "reactions",
                                                                        },
                                                                        Object {
                                                                          "label": "Comentários",
                                                                          "value": "commentCount",
                                                                        },
                                                                      ]
                        }
                        search={[Function]}
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "categories": Array [
                          Object {
                            "name": "react",
                            "path": "react",
                          },
                          Object {
                            "name": "redux",
                            "path": "redux",
                          },
                          Object {
                            "name": "udacity",
                            "path": "udacity",
                          },
                        ],
                        "currentCategory": "all",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "ordination": Array [
                          Object {
                            "label": "Decrescente",
                            "value": "desc",
                          },
                          Object {
                            "label": "Crescente",
                            "value": "asc",
                          },
                        ],
                        "properties": Array [
                          Object {
                            "label": "Vote",
                            "value": "votes",
                          },
                          Object {
                            "label": "Data",
                            "value": "timestamp",
                          },
                          Object {
                            "label": "Reações",
                            "value": "reactions",
                          },
                          Object {
                            "label": "Comentários",
                            "value": "commentCount",
                          },
                        ],
                        "search": [Function],
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": Symbol(react.fragment),
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "category": "all",
                "filter": [Function],
                "order": "desc",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "project": "Udacity - Leitura",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Head
            description="Bem vindos ao Udacity Leitura, onde podemos discutir assuntos variados com uma gama enorme de pessoas"
            img="/img/blog_bottom.png"
            project="Udacity - Leitura"
/>,
          false,
          <div
            className="container"
>
            <div
                        className="row"
            >
                        <div
                                    className="col col-lg-12 col-md-12 col-sm-12 col-12"
                        >
                                    <div
                                                className="clients-grid"
                                    >
                                                <Unknown>
                                                            <CategoryOption
                                                                        categories={
                                                                                    Array [
                                                                                                Object {
                                                                                                  "name": "react",
                                                                                                  "path": "react",
                                                                                                },
                                                                                                Object {
                                                                                                  "name": "redux",
                                                                                                  "path": "redux",
                                                                                                },
                                                                                                Object {
                                                                                                  "name": "udacity",
                                                                                                  "path": "udacity",
                                                                                                },
                                                                                              ]
                                                                        }
                                                                        currentCategory="all"
                                                            />
                                                            <FilterBy
                                                                        ordination={
                                                                                    Array [
                                                                                                Object {
                                                                                                  "label": "Decrescente",
                                                                                                  "value": "desc",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Crescente",
                                                                                                  "value": "asc",
                                                                                                },
                                                                                              ]
                                                                        }
                                                                        properties={
                                                                                    Array [
                                                                                                Object {
                                                                                                  "label": "Vote",
                                                                                                  "value": "votes",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Data",
                                                                                                  "value": "timestamp",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Reações",
                                                                                                  "value": "reactions",
                                                                                                },
                                                                                                Object {
                                                                                                  "label": "Comentários",
                                                                                                  "value": "commentCount",
                                                                                                },
                                                                                              ]
                                                                        }
                                                                        search={[Function]}
                                                            />
                                                </Unknown>
                                    </div>
                        </div>
                        <Connect(PostList)
                                    category="all"
                                    filter={[Function]}
                                    order="desc"
                        />
            </div>
</div>,
          <AddPostButton />,
          <Footer
            project="Udacity - Leitura"
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Bem vindos ao Udacity Leitura, onde podemos discutir assuntos variados com uma gama enorme de pessoas",
            "img": "/img/blog_bottom.png",
            "project": "Udacity - Leitura",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="row"
>
              <div
                            className="col col-lg-12 col-md-12 col-sm-12 col-12"
              >
                            <div
                                          className="clients-grid"
                            >
                                          <Unknown>
                                                        <CategoryOption
                                                                      categories={
                                                                                    Array [
                                                                                                  Object {
                                                                                                    "name": "react",
                                                                                                    "path": "react",
                                                                                                  },
                                                                                                  Object {
                                                                                                    "name": "redux",
                                                                                                    "path": "redux",
                                                                                                  },
                                                                                                  Object {
                                                                                                    "name": "udacity",
                                                                                                    "path": "udacity",
                                                                                                  },
                                                                                                ]
                                                                      }
                                                                      currentCategory="all"
                                                        />
                                                        <FilterBy
                                                                      ordination={
                                                                                    Array [
                                                                                                  Object {
                                                                                                    "label": "Decrescente",
                                                                                                    "value": "desc",
                                                                                                  },
                                                                                                  Object {
                                                                                                    "label": "Crescente",
                                                                                                    "value": "asc",
                                                                                                  },
                                                                                                ]
                                                                      }
                                                                      properties={
                                                                                    Array [
                                                                                                  Object {
                                                                                                    "label": "Vote",
                                                                                                    "value": "votes",
                                                                                                  },
                                                                                                  Object {
                                                                                                    "label": "Data",
                                                                                                    "value": "timestamp",
                                                                                                  },
                                                                                                  Object {
                                                                                                    "label": "Reações",
                                                                                                    "value": "reactions",
                                                                                                  },
                                                                                                  Object {
                                                                                                    "label": "Comentários",
                                                                                                    "value": "commentCount",
                                                                                                  },
                                                                                                ]
                                                                      }
                                                                      search={[Function]}
                                                        />
                                          </Unknown>
                            </div>
              </div>
              <Connect(PostList)
                            category="all"
                            filter={[Function]}
                            order="desc"
              />
</div>,
            "className": "container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col col-lg-12 col-md-12 col-sm-12 col-12"
>
                  <div
                                    className="clients-grid"
                  >
                                    <Unknown>
                                                      <CategoryOption
                                                                        categories={
                                                                                          Array [
                                                                                                            Object {
                                                                                                              "name": "react",
                                                                                                              "path": "react",
                                                                                                            },
                                                                                                            Object {
                                                                                                              "name": "redux",
                                                                                                              "path": "redux",
                                                                                                            },
                                                                                                            Object {
                                                                                                              "name": "udacity",
                                                                                                              "path": "udacity",
                                                                                                            },
                                                                                                          ]
                                                                        }
                                                                        currentCategory="all"
                                                      />
                                                      <FilterBy
                                                                        ordination={
                                                                                          Array [
                                                                                                            Object {
                                                                                                              "label": "Decrescente",
                                                                                                              "value": "desc",
                                                                                                            },
                                                                                                            Object {
                                                                                                              "label": "Crescente",
                                                                                                              "value": "asc",
                                                                                                            },
                                                                                                          ]
                                                                        }
                                                                        properties={
                                                                                          Array [
                                                                                                            Object {
                                                                                                              "label": "Vote",
                                                                                                              "value": "votes",
                                                                                                            },
                                                                                                            Object {
                                                                                                              "label": "Data",
                                                                                                              "value": "timestamp",
                                                                                                            },
                                                                                                            Object {
                                                                                                              "label": "Reações",
                                                                                                              "value": "reactions",
                                                                                                            },
                                                                                                            Object {
                                                                                                              "label": "Comentários",
                                                                                                              "value": "commentCount",
                                                                                                            },
                                                                                                          ]
                                                                        }
                                                                        search={[Function]}
                                                      />
                                    </Unknown>
                  </div>
</div>,
                <Connect(PostList)
                  category="all"
                  filter={[Function]}
                  order="desc"
/>,
              ],
              "className": "row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="clients-grid"
>
                    <Unknown>
                                        <CategoryOption
                                                            categories={
                                                                                Array [
                                                                                                    Object {
                                                                                                      "name": "react",
                                                                                                      "path": "react",
                                                                                                    },
                                                                                                    Object {
                                                                                                      "name": "redux",
                                                                                                      "path": "redux",
                                                                                                    },
                                                                                                    Object {
                                                                                                      "name": "udacity",
                                                                                                      "path": "udacity",
                                                                                                    },
                                                                                                  ]
                                                            }
                                                            currentCategory="all"
                                        />
                                        <FilterBy
                                                            ordination={
                                                                                Array [
                                                                                                    Object {
                                                                                                      "label": "Decrescente",
                                                                                                      "value": "desc",
                                                                                                    },
                                                                                                    Object {
                                                                                                      "label": "Crescente",
                                                                                                      "value": "asc",
                                                                                                    },
                                                                                                  ]
                                                            }
                                                            properties={
                                                                                Array [
                                                                                                    Object {
                                                                                                      "label": "Vote",
                                                                                                      "value": "votes",
                                                                                                    },
                                                                                                    Object {
                                                                                                      "label": "Data",
                                                                                                      "value": "timestamp",
                                                                                                    },
                                                                                                    Object {
                                                                                                      "label": "Reações",
                                                                                                      "value": "reactions",
                                                                                                    },
                                                                                                    Object {
                                                                                                      "label": "Comentários",
                                                                                                      "value": "commentCount",
                                                                                                    },
                                                                                                  ]
                                                            }
                                                            search={[Function]}
                                        />
                    </Unknown>
</div>,
                  "className": "col col-lg-12 col-md-12 col-sm-12 col-12",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Unknown>
                      <CategoryOption
                                            categories={
                                                                  Array [
                                                                                        Object {
                                                                                          "name": "react",
                                                                                          "path": "react",
                                                                                        },
                                                                                        Object {
                                                                                          "name": "redux",
                                                                                          "path": "redux",
                                                                                        },
                                                                                        Object {
                                                                                          "name": "udacity",
                                                                                          "path": "udacity",
                                                                                        },
                                                                                      ]
                                            }
                                            currentCategory="all"
                      />
                      <FilterBy
                                            ordination={
                                                                  Array [
                                                                                        Object {
                                                                                          "label": "Decrescente",
                                                                                          "value": "desc",
                                                                                        },
                                                                                        Object {
                                                                                          "label": "Crescente",
                                                                                          "value": "asc",
                                                                                        },
                                                                                      ]
                                            }
                                            properties={
                                                                  Array [
                                                                                        Object {
                                                                                          "label": "Vote",
                                                                                          "value": "votes",
                                                                                        },
                                                                                        Object {
                                                                                          "label": "Data",
                                                                                          "value": "timestamp",
                                                                                        },
                                                                                        Object {
                                                                                          "label": "Reações",
                                                                                          "value": "reactions",
                                                                                        },
                                                                                        Object {
                                                                                          "label": "Comentários",
                                                                                          "value": "commentCount",
                                                                                        },
                                                                                      ]
                                            }
                                            search={[Function]}
                      />
</Unknown>,
                    "className": "clients-grid",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        <CategoryOption
                          categories={
                                                    Array [
                                                                              Object {
                                                                                "name": "react",
                                                                                "path": "react",
                                                                              },
                                                                              Object {
                                                                                "name": "redux",
                                                                                "path": "redux",
                                                                              },
                                                                              Object {
                                                                                "name": "udacity",
                                                                                "path": "udacity",
                                                                              },
                                                                            ]
                          }
                          currentCategory="all"
/>,
                        <FilterBy
                          ordination={
                                                    Array [
                                                                              Object {
                                                                                "label": "Decrescente",
                                                                                "value": "desc",
                                                                              },
                                                                              Object {
                                                                                "label": "Crescente",
                                                                                "value": "asc",
                                                                              },
                                                                            ]
                          }
                          properties={
                                                    Array [
                                                                              Object {
                                                                                "label": "Vote",
                                                                                "value": "votes",
                                                                              },
                                                                              Object {
                                                                                "label": "Data",
                                                                                "value": "timestamp",
                                                                              },
                                                                              Object {
                                                                                "label": "Reações",
                                                                                "value": "reactions",
                                                                              },
                                                                              Object {
                                                                                "label": "Comentários",
                                                                                "value": "commentCount",
                                                                              },
                                                                            ]
                          }
                          search={[Function]}
/>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "categories": Array [
                            Object {
                              "name": "react",
                              "path": "react",
                            },
                            Object {
                              "name": "redux",
                              "path": "redux",
                            },
                            Object {
                              "name": "udacity",
                              "path": "udacity",
                            },
                          ],
                          "currentCategory": "all",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "ordination": Array [
                            Object {
                              "label": "Decrescente",
                              "value": "desc",
                            },
                            Object {
                              "label": "Crescente",
                              "value": "asc",
                            },
                          ],
                          "properties": Array [
                            Object {
                              "label": "Vote",
                              "value": "votes",
                            },
                            Object {
                              "label": "Data",
                              "value": "timestamp",
                            },
                            Object {
                              "label": "Reações",
                              "value": "reactions",
                            },
                            Object {
                              "label": "Comentários",
                              "value": "commentCount",
                            },
                          ],
                          "search": [Function],
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                    ],
                    "type": Symbol(react.fragment),
                  },
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "category": "all",
                  "filter": [Function],
                  "order": "desc",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "project": "Udacity - Leitura",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`[Page Component] Home Renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <withRouter(Connect(Home))
    app={
        Object {
            "loading": false,
          }
    }
    categories={
        Array [
            Object {
              "name": "react",
              "path": "react",
            },
            Object {
              "name": "redux",
              "path": "redux",
            },
            Object {
              "name": "udacity",
              "path": "udacity",
            },
          ]
    }
    getAllData={[Function]}
    match={
        Object {
            "params": Object {
              "id": "all",
            },
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
